--- a/Practice/p2/index.html
+++ b/Practice/p2/index.html
@@ -10,14 +10,16 @@
 
 <body>
       <div class="nav-bar">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikbest.com%2Fso%2Fgaming-logo.html&psig=AOvVaw0vXSlL9gQZDVrjdHesSonB&ust=1757145226943000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOjmx5qSwY8DFQAAAAAdAAAAABAE" alt="">
         <ul>
             <li>
                 <a href="#">HOME</a>
                 <a href="#">PROFILE</a>
                 <a href="#">DETAILS</a>
-                <a href="#">CONTACT-US</a>
+                <a href="#">CONTACT US</a>
             </li>
         </ul>
+        <p>UserName</p>
     </div>
     <div class="container">
         <div class="left-text">
