--- a/Module4-CSS/14.CSS-Variables/index.html
+++ b/Module4-CSS/14.CSS-Variables/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Variables</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1>Hello Tracker's !!!</h1>
+        <div class="box">
+            <h2>
+                Mountains
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ratione dolorum eius itaque ad aperiam sunt
+                totam voluptatum odit molestias laborum placeat delectus consequatur enim explicabo recusandae,
+                perferendis alias unde.
+            </p>
+        </div>
+
+        <div class="box">
+            <h2>
+                Beaches
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ratione dolorum eius itaque ad aperiam sunt
+                totam voluptatum odit molestias laborum placeat delectus consequatur enim explicabo recusandae,
+                perferendis alias unde.
+            </p>
+        </div>
+
+        <div class="box">
+            <h2>
+                WaterFalls
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ratione dolorum eius itaque ad aperiam sunt
+                totam voluptatum odit molestias laborum placeat delectus consequatur enim explicabo recusandae,
+                perferendis alias unde.
+            </p>
+
+        </div>
+    </div>
+    <h4>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, eaque.
+    </h4>
 </body>
+
 </html>
