--- a/Module4-CSS/14.CSS Variables In CSS/index.html
+++ b/Module4-CSS/14.CSS Variables In CSS/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container dark">
         <h1>Hello Tracker's !!!</h1>
         <div class="box">
             <h2>
@@ -45,9 +45,9 @@
 
         </div>
     </div>
-    <h4>
+    <!-- <h4>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, eaque.
-    </h4>
+    </h4> -->
 </body>
 
 </html>
