--- a/Module4-CSS/Assignment/index.html
+++ b/Module4-CSS/Assignment/index.html
@@ -10,15 +10,16 @@
 
 <body>
     <div class="container">
-        <p>Logo</p>
+        <!-- <p>Logo</p> -->
+        <div class="logo">
+            Logo
+        </div>
         <div class="navbar">
             <ul>
-                <li>
-                    <a href="#">Home</a>
-                    <a href="#">Services</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Contact Us</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
         <div class="username">
