--- a/Practice/p2/index.html
+++ b/Practice/p2/index.html
@@ -9,15 +9,14 @@
 </head>
 
 <body>
-      <div class="nav-bar">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikbest.com%2Fso%2Fgaming-logo.html&psig=AOvVaw0vXSlL9gQZDVrjdHesSonB&ust=1757145226943000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOjmx5qSwY8DFQAAAAAdAAAAABAE" alt="">
-        <ul>
-            <li>
-                <a href="#">HOME</a>
-                <a href="#">PROFILE</a>
-                <a href="#">DETAILS</a>
-                <a href="#">CONTACT US</a>
-            </li>
+    <div class="nav-bar">
+        <!-- <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikbest.com%2Fso%2Fgaming-logo.html&psig=AOvVaw0vXSlL9gQZDVrjdHesSonB&ust=1757145226943000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOjmx5qSwY8DFQAAAAAdAAAAABAE" -->
+            <!-- alt=""> -->
+        <ul id="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
         <p>UserName</p>
     </div>
