--- a/Module4-CSS/Assignment/index.html
+++ b/Module4-CSS/Assignment/index.html
@@ -10,11 +10,8 @@
 
 <body>
     <header>
-        <div class="container">
             <div class="nav">
-                <div class="logo">
                     <h2>Logo</h2>
-                </div>
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Services</a></li>
@@ -26,13 +23,13 @@
                     <a href="#user">Username</a>
                 </div>
             </div>
-        </div>
     </header>
 
     <main>
         <section class="hero">
             <div class="left">
-                <h1>Revitalize Your <br> clothes with Expert</h1>
+                <h1>Revitalize Your  </h1>
+                <span>Clothes with Expert</span>
                 <h1 id="h-1">Laundry Services!</h1>
                 <p>
                     From premium dry cleaning to swift wash and fold, we
