--- a/Responsive Website/index.html
+++ b/Responsive Website/index.html
@@ -164,9 +164,10 @@
                                 </select>
                             </div>
 
-                              <div class="form-group">
+                            <div class="form-group">
                                 <label for="message">Special Requests:</label>
-                                <textarea name="message" id="message" rows="4" placeholder="Any special dietry requirements or requests..."></textarea>
+                                <textarea name="message" id="message" rows="4"
+                                    placeholder="Any special dietry requirements or requests..."></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Submit Reservation</button>
                         </form>
@@ -175,6 +176,50 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Bella Vista</h3>
+                    <p>
+                        Authentic Italian cuisine in the heart of the city. Experienced the taste of Itay with every
+                        bite.
+                    </p>
+                </div>
+
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section">
+                    <h4>Opening Hours</h4>
+                    <p>Monday-Thursday: 11:00 AM - 10:00 PM</p>
+                    <p>Friday-Satuarday: 11:00 AM - 11:00 PM</p>
+                    <p>Sunday: 12:09 PM - 9:00 PM</p>
+                </div>
+
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="#" class="social-link">Facebook</a>
+                        <a href="#" class="social-link">Instagram</a>
+                        <a href="#" class="social-link">Twitter</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>@ 2024 Bella Vista Restaurant. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
