--- a/Practice/p5-own/index.html
+++ b/Practice/p5-own/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <section id="home" class="section">
+        <section id="home" class="home">
             <div class="container">
                 <div class="section-content">
                     <h2>Welcome To A1X Resort</h2>
@@ -42,6 +42,76 @@
                     <div class="btn-1">
                         <a href="#booking" class="btn btn-primary">Book a room today!</a>
                         <a href="#services" class="btn btn-secondary">Our Services</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="services" class="services">
+            <div class="container">
+                <div class="page2">
+                    <div class="left-content">
+                        <h2>Our Services</h2>
+                        <ul class="links-2">
+                            <li>Room Service.</li>
+                            <li>Free Food.</li>
+                            <li>A Local Guide.</li>
+                            <li>Free Swim Suits.</li>
+                            <li>Jetskey Ride.</li>
+                        </ul>
+                    </div>
+                    <div class="right-images">
+                        <div class="box-imgs col"
+                            style="background-image: url(https://media.istockphoto.com/id/2172691145/photo/close-up-of-woman-using-vacuum-cleaner-while-cleaning-the-apartment.jpg?s=612x612&w=0&k=20&c=uBiWPHLcuUqAuG2tLnnurbskddkTEH9OQmyA1aBG-X0=);">
+                        </div>
+
+                        <div class="box-imgs row"
+                            style="background-image: url(https://media.istockphoto.com/id/1493740613/photo/a-romantic-breakfast-table-by-the-sea.jpg?s=612x612&w=0&k=20&c=OpD2QjLgk8EX52d82IfMFSSGeVXe0nNwCoZxt_WfsHs=);">
+                        </div>
+
+                        <div class="box-imgs "
+                            style="background-image: url(https://media.istockphoto.com/id/1399358200/photo/travel-guide-showing-the-tourist-spot.jpg?s=612x612&w=0&k=20&c=Ds9eDrGOmUMR49tmU3gFR8LjX0Cf7QQlxDSAXxh-dlw=);">
+                        </div>
+
+                        <div class="box-imgs "
+                            style="background-image: url(https://images.unsplash.com/photo-1594589737941-9a238f0788bf?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHN3aW0lMjBzdWl0cyUyMGJvdGglMjBnZW5kZXJ8ZW58MHx8MHx8fDA%3D);">
+                        </div>
+
+                        <div class="box-imgs col"
+                            style="background-image: url(https://media.istockphoto.com/id/176573321/photo/cooling-off-in-the-tropics.jpg?s=612x612&w=0&k=20&c=LELRHkd6r49bYQML2BdfKZ0Yg-0Wclmv472dMX-2oKM=);">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="booking" class="booking">
+            <div class="container">
+                <div class="page-3">
+                    <div class="left">
+                        <h2>Book a Room Toady!</h2>
+                        <div class="room-1">
+                            <h3 style="font-size: 1.5rem;">Double Bed Room No.-187</h3>
+                            <p style="font-size: 1.2rem;">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptates libero
+                                doloribus?
+                            </p>
+                        </div>
+                        <div class="room-2">
+                            <h3 style="font-size: 1.5rem;">Single Bed Room No.-180</h3>
+                            <p style="font-size: 1.2rem;">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt laudantium error
+                                laborum?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="bed bed-1">
+                            <img src="https://images.unsplash.com/photo-1689729771136-46e2ee831b83?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cmVzb3J0JTIwcm9vbXN8ZW58MHx8MHx8fDA%3D" alt="error">
+                        </div>
+                        <div class="bed bed-2">
+                            <img src="https://plus.unsplash.com/premium_photo-1663061414669-bb34bcd3ff2f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cmVzb3J0JTIwcm9vbXN8ZW58MHx8MHx8fDA%3D" alt="error">
+                        </div>
                     </div>
                 </div>
             </div>
