--- a/Practice/p6/index.html
+++ b/Practice/p6/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aditya</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <button>
-    If you Click You are intelligent!!!
-  </button>
+
+  <div class="container">
+    <div class="navbar">
+      <div class="logo">
+        <img src="logo.png" alt="">
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">ARTIST</a></li>
+          <li><a href="#">EXIHIBISION</a></li>
+          <li><a href="#">EVENT</a></li>
+          <li><a href="#">VISIT US</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="content-row">
+      <div class="left-col">
+        <div class="search">
+          <img src="" alt="">
+          <input type="text" placeholder="Google Search">
+        </div>
+        <hr>
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam commodi consequatur aperiam eum?
+          Voluptatem hic facere, minima mollitia quasi reprehenderit expedita incidunt veritatis quidem aspernatur omnis
+          sapiente saepe ipsa nulla repellat assumenda! Placeat, reiciendis alias!
+        </p>
+      </div>
+      <div class="right-col">
+          <img src="Gautama_Buddha_pic.png" alt="">
+      </div>
+    </div>
+
+  </div>
+
 </body>
+
 </html>
